circt-bc260128-00000aa3/origin/error.log
<stdin>:36:10: error: 'arc.state' op operand type mismatch: operand #2
    %2 = comb.mux bin %0#1, %0#0, %a : !hw.array<2xi1>
         ^
<stdin>:36:10: note: see current operation: %3 = "arc.state"(%7, %0#1, %1, %0#0, %2) <{arc = @m_arc, latency = 1 : i32, operandSegmentSizes = array<i32: 1, 1, 0, 3, 0>}> : (!seq.clock, i1, i1, !hw.array<2xi1>, i1062869376) -> !hw.array<2xi1>
<stdin>:36:10: note: expected type: '!hw.array<2xi1>'
<stdin>:36:10: note:   actual type: 'i1062869376'
